# angular-todo-app

./: package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
src/: styles.scss
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  todo.service.spec.ts  todo.service.ts  todo.store.ts  todo.ts
src/app/create-todo/: create-todo.component.html  create-todo.component.ts
src/app/four-o-four/: four-o-four.component.html  four-o-four.component.spec.ts  four-o-four.component.ts
src/app/header-bar/: header-bar.component.html  header-bar.component.ts
src/app/home/: home.component.html
src/app/todo-list-item/: todo-list-item.component.html  todo-list-item.component.spec.ts  todo-list-item.component.ts
