[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features=["derive"] }
tokio = { version = "1.37.0", features=["rt", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features=["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }
